no more IdImpl in playground.wrashid.*
git-svn-id: file:///srv/local/data/cleanRepo/trunk@30573 a0517364-e873-4167-b1c8-416daa5a6b91